# nano-node

./: .clang-format.base  CMakeLists.txt  Info.plist.in  LICENSE  README.md  SECURITY.md  VBAN.rc  bootstrap_weights_beta.cpp  bootstrap_weights_live.cpp  build_version.cc  config-node.toml.sample  config-rpc.toml.sample  doxygen.config  valgrind.supp  vbancurrency-beta.spec.in  vbancurrency.spec.in
api/flatbuffers/: vbanapi.fbs
ci/: build-centos.sh  build-deploy.sh  build-gitlab.sh  build-travis.sh  check-cmake-format.sh  clang-format-all.sh  cmake-format-all.sh  deploy-docker.sh  deploy-travis.sh  record_rep_weights.py
ci/actions/: deploy.sh
crypto/ed25519-donna/: ed25519-hash-custom.h
debian-control/: postinst.in  postrm.in
docker/ci/: Dockerfile-base  Dockerfile-clang  Dockerfile-clang-6  Dockerfile-gcc  build.sh
docker/node/: Dockerfile  build.sh  entry.sh
etc/systemd/: vbancurrency-beta.service  vbancurrency-test.service  vbancurrency.service
systest/: set_bandwidth_params.sh
util/: changelog.py  changelog_generator  makesrc
util/build_prep/: bootstrap_boost.sh  fetch_boost.sh
vban/core_test/: active_transactions.cpp  block.cpp  block_store.cpp  bootstrap.cpp  cli.cpp  confirmation_height.cpp  confirmation_solicitor.cpp  conflicts.cpp  core_test_main.cc  difficulty.cpp  distributed_work.cpp  election.cpp  election_scheduler.cpp  epochs.cpp  frontiers_confirmation.cpp  gap_cache.cpp  ipc.cpp  ledger.cpp  locks.cpp  logger.cpp  memory_pool.cpp  message.cpp  message_parser.cpp  (+21 more)
vban/vban_node/: CMakeLists.txt  daemon.cpp  daemon.hpp  entry.cpp
(+319 files in other folders)
